fixed spacing, text alignment and removed 'BodyA' class on single-post shop page.

--- a/themes/inhabitant/sass/_content.scss
+++ b/themes/inhabitant/sass/_content.scss
@@ -179,164 +179,6 @@ div.entry-content {
 	display: none;
 }
 
-/* Comments */
-
-.comment-content a {
-	word-wrap: break-word;
-}
-.bypostauthor {
-	display: block;
-}
-
-div.site-info a {
-	display: inline;
-}
-
-.comment-list {
-	margin: 0;
-	padding: 0;
-}
-
-.comment-body {
-	display: flex;
-	margin: 40px 0;
-	border-bottom: 1px $color__border solid;
-	font-family: Merriweather;
-	p{
-		margin: 18px 0;
-	}
-	.reply {
-		margin-bottom: 32px;
-		a {
-			text-decoration: none;
-		}
-	}
-}
-
-.comments-title {
-	padding-top: 80px;
-	text-transform: uppercase;
-	font-weight: bolder;
-	font-size: 2.2rem;
-}
-
-.comment-author-avatar {
-	padding-right: 40px;
-	img {
-	border-radius: 49%;
-	}
-}
-
-.comment-author {
-	font-weight: bold;
-	.fn {
-		font-style: normal;
-	}
-}
-
-.comment-metadata {
-	color: $color__m-grey-brand;
-	font-family: Merriweather;
-	
-	a {
-		color: $color__m-grey-brand;
-		&:hover {
-			color: $color__m-grey-brand;
-		}
-		&:visited:hover {
-			color: $color__m-grey-brand;
-		}
-	}
-}
-
-.logged-in-as {
-	display: none;
-}
-
-.comment-reply-title {
-	font-size: 1.8rem;
-	font-weight: bolder;
-	text-transform: uppercase;
-}
-
-.comment-subtitle, .comment-notes {
-	font-size: 1rem;
-	font-family: Merriweather;
-}
-
-.comment-notes {
-	margin-bottom: 35px;
-}
-
-.comment-form-comment {
-	text-transform: uppercase;
-	font-size: 1.09rem;
-	margin: 5px 0;
-	label{
-		display: block;
-		margin: 11px 0;
-	}
-}
-
-textarea#comment {
-	background-color: lighten($color__background-hr, 15%);
-}
-
-.comment-form-author, .comment-form-email {
- display: inline-block;
- width: 49.7%;
- flex-direction: row;
- flex-flow: wrap;
- text-transform: uppercase;
- font-family: Novecentosanswide;
- font-size: 1.1rem;
- margin-top: 45px;
- input {
-	 width: 100%;
-	 margin: 10px 0 5px;
-	 display: inline;
-	 border-radius: 0;
-	}
-	span {
-		color: red;
-	}
-}
-
-.comment-form-url {
-	display: inline;
-	width: 100%;
-	text-transform: uppercase;
-	font-family: Novecentosanswide;
-	font-size: 1.1rem;
-	input {
-		width: 100%;
-		margin: 10px 0 10px;
-		display: inline;
-		border-radius: 0;
-	}
-}
-
-input#author, input#email, input#url {
-	background-color: lighten($color__background-hr, 15%);
-	height: 38px;
-	border-color: $color__border;
-}
-
-input#submit.submit {
-	background-color: $color__green-brand;
-	border: none;
-	box-shadow: none;
-	color: white;
-	font-size: .9rem;
-	font-weight: 200;
-	text-transform: uppercase;
-	text-shadow: none;
-	font-family: Novecentosanswide;
-	border-radius: 0;
-	margin: 0 0 50px;
-	padding: 12px 24px;
-}
-
 //single product
 
 .product-content article {
@@ -345,7 +187,8 @@ input#submit.submit {
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 25px;
 	width: 100%;
-	height: 600px;
+	height: 540px;
+	margin-top: 50px;
 	justify-content: center;
 	align-content: center;
 	.product-entry-header {
@@ -353,11 +196,12 @@ input#submit.submit {
 		display: grid;
 		grid-template-columns: 1 1fr;
 		justify-content: center;
-		align-content: center;
+		align-content: flex-start;
 		width: 100%;
 		height: 600px;
 		img {
 			grid-column: 1;
+			margin-top: 90px;
 			width: 100%;
 			object-fit: cover;
 			height: auto;
@@ -366,18 +210,31 @@ input#submit.submit {
 	}
 	.content-container {
 		grid-column: 2;
-		padding: 20px 20px 25px;
+		padding: 20px 17px 25px;
 		width: 100%;
 		height: 100%;
 		h1 {
 			color: $color__orange-brand;
 			text-transform: uppercase;
 			font-weight: bold;
-			font-size: 2rem;
-			margin-top: 100px;
+			font-size: 2.4rem;
+			margin-top: 65px;
+			margin-bottom: 10px;
+		}
+		.single-product-price {
+			font-size: 1.8rem;
+			font-family: Novecentosanswide;
+			margin: 0px;
+			padding: 0px;
 		}
 		div.product-entry-meta {
 			margin-bottom: 30px;
+			font-family: Merriweather;
+			padding-top: 0px;
+			line-height: 1.7;
+			p {
+				padding-bottom: 10px;
+			}
 		}
 	}
 }
