--- a/themes/inhabitant/style.css
+++ b/themes/inhabitant/style.css
@@ -573,6 +573,135 @@ textarea {
   padding-left: 3px;
   width: 100%; }
 
+/* Comments */
+.comment-content a {
+  word-wrap: break-word; }
+
+.bypostauthor {
+  display: block; }
+
+div.site-info a {
+  display: inline; }
+
+.comment-list {
+  margin: 0;
+  padding: 0; }
+
+.comment-body {
+  display: -ms-flexbox;
+  display: flex;
+  margin: 40px 0;
+  border-bottom: 1px #e1e1e1 solid;
+  font-family: Merriweather; }
+  .comment-body p {
+    margin: 18px 0; }
+  .comment-body .reply {
+    margin-bottom: 32px; }
+    .comment-body .reply a {
+      text-decoration: none; }
+
+.comments-title {
+  padding-top: 80px;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 2.2rem; }
+
+.comment-author-avatar {
+  padding-right: 40px; }
+  .comment-author-avatar img {
+    border-radius: 49%; }
+
+.comment-author {
+  font-weight: bold; }
+  .comment-author .fn {
+    font-style: normal; }
+
+.comment-metadata {
+  color: #808080;
+  font-family: Merriweather; }
+  .comment-metadata a {
+    color: #808080; }
+    .comment-metadata a:hover {
+      color: #808080; }
+    .comment-metadata a:visited:hover {
+      color: #808080; }
+
+.logged-in-as {
+  display: none; }
+
+.comment-reply-title {
+  font-size: 1.8rem;
+  font-weight: bolder;
+  text-transform: uppercase; }
+
+.comment-subtitle, .comment-notes {
+  font-size: 1rem;
+  font-family: Merriweather; }
+
+.comment-notes {
+  margin-bottom: 35px; }
+
+.comment-form-comment {
+  text-transform: uppercase;
+  font-size: 1.09rem;
+  margin: 5px 0; }
+  .comment-form-comment label {
+    display: block;
+    margin: 11px 0; }
+
+textarea#comment {
+  background-color: #f2f2f2; }
+
+.comment-form-author, .comment-form-email {
+  display: inline-block;
+  width: 49.7%;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
+  text-transform: uppercase;
+  font-family: Novecentosanswide;
+  font-size: 1.1rem;
+  margin-top: 45px; }
+  .comment-form-author input, .comment-form-email input {
+    width: 100%;
+    margin: 10px 0 5px;
+    display: inline;
+    border-radius: 0; }
+  .comment-form-author span, .comment-form-email span {
+    color: red; }
+
+.comment-form-url {
+  display: inline;
+  width: 100%;
+  text-transform: uppercase;
+  font-family: Novecentosanswide;
+  font-size: 1.1rem; }
+  .comment-form-url input {
+    width: 100%;
+    margin: 10px 0 10px;
+    display: inline;
+    border-radius: 0; }
+
+input#author, input#email, input#url {
+  background-color: #f2f2f2;
+  height: 38px;
+  border-color: #e1e1e1; }
+
+input#submit.submit {
+  background-color: #248A83;
+  border: none;
+  box-shadow: none;
+  color: white;
+  font-size: .9rem;
+  font-weight: 200;
+  text-transform: uppercase;
+  text-shadow: none;
+  font-family: Novecentosanswide;
+  border-radius: 0;
+  margin: 0 0 50px;
+  padding: 12px 24px; }
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
@@ -1078,135 +1207,6 @@ div.entry-content p.BodyA {
 .archive .format-aside .entry-title {
   display: none; }
 
-/* Comments */
-.comment-content a {
-  word-wrap: break-word; }
-
-.bypostauthor {
-  display: block; }
-
-div.site-info a {
-  display: inline; }
-
-.comment-list {
-  margin: 0;
-  padding: 0; }
-
-.comment-body {
-  display: -ms-flexbox;
-  display: flex;
-  margin: 40px 0;
-  border-bottom: 1px #e1e1e1 solid;
-  font-family: Merriweather; }
-  .comment-body p {
-    margin: 18px 0; }
-  .comment-body .reply {
-    margin-bottom: 32px; }
-    .comment-body .reply a {
-      text-decoration: none; }
-
-.comments-title {
-  padding-top: 80px;
-  text-transform: uppercase;
-  font-weight: bolder;
-  font-size: 2.2rem; }
-
-.comment-author-avatar {
-  padding-right: 40px; }
-  .comment-author-avatar img {
-    border-radius: 49%; }
-
-.comment-author {
-  font-weight: bold; }
-  .comment-author .fn {
-    font-style: normal; }
-
-.comment-metadata {
-  color: #808080;
-  font-family: Merriweather; }
-  .comment-metadata a {
-    color: #808080; }
-    .comment-metadata a:hover {
-      color: #808080; }
-    .comment-metadata a:visited:hover {
-      color: #808080; }
-
-.logged-in-as {
-  display: none; }
-
-.comment-reply-title {
-  font-size: 1.8rem;
-  font-weight: bolder;
-  text-transform: uppercase; }
-
-.comment-subtitle, .comment-notes {
-  font-size: 1rem;
-  font-family: Merriweather; }
-
-.comment-notes {
-  margin-bottom: 35px; }
-
-.comment-form-comment {
-  text-transform: uppercase;
-  font-size: 1.09rem;
-  margin: 5px 0; }
-  .comment-form-comment label {
-    display: block;
-    margin: 11px 0; }
-
-textarea#comment {
-  background-color: #f2f2f2; }
-
-.comment-form-author, .comment-form-email {
-  display: inline-block;
-  width: 49.7%;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  -ms-flex-flow: wrap;
-      flex-flow: wrap;
-  text-transform: uppercase;
-  font-family: Novecentosanswide;
-  font-size: 1.1rem;
-  margin-top: 45px; }
-  .comment-form-author input, .comment-form-email input {
-    width: 100%;
-    margin: 10px 0 5px;
-    display: inline;
-    border-radius: 0; }
-  .comment-form-author span, .comment-form-email span {
-    color: red; }
-
-.comment-form-url {
-  display: inline;
-  width: 100%;
-  text-transform: uppercase;
-  font-family: Novecentosanswide;
-  font-size: 1.1rem; }
-  .comment-form-url input {
-    width: 100%;
-    margin: 10px 0 10px;
-    display: inline;
-    border-radius: 0; }
-
-input#author, input#email, input#url {
-  background-color: #f2f2f2;
-  height: 38px;
-  border-color: #e1e1e1; }
-
-input#submit.submit {
-  background-color: #248A83;
-  border: none;
-  box-shadow: none;
-  color: white;
-  font-size: .9rem;
-  font-weight: 200;
-  text-transform: uppercase;
-  text-shadow: none;
-  font-family: Novecentosanswide;
-  border-radius: 0;
-  margin: 0 0 50px;
-  padding: 12px 24px; }
-
 .product-content article {
   border: 0;
   display: -ms-grid;
@@ -1215,7 +1215,8 @@ input#submit.submit {
       grid-template-columns: 1fr 1fr;
   grid-gap: 25px;
   width: 100%;
-  height: 600px;
+  height: 540px;
+  margin-top: 50px;
   -ms-flex-pack: center;
       justify-content: center;
   -ms-flex-line-pack: center;
@@ -1229,13 +1230,14 @@ input#submit.submit {
         grid-template-columns: 1 1fr;
     -ms-flex-pack: center;
         justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
     width: 100%;
     height: 600px; }
     .product-content article .product-entry-header img {
       -ms-grid-column: 1;
           grid-column: 1;
+      margin-top: 90px;
       width: 100%;
       object-fit: cover;
       height: auto;
@@ -1243,17 +1245,28 @@ input#submit.submit {
   .product-content article .content-container {
     -ms-grid-column: 2;
         grid-column: 2;
-    padding: 20px 20px 25px;
+    padding: 20px 17px 25px;
     width: 100%;
     height: 100%; }
     .product-content article .content-container h1 {
       color: #d99054;
       text-transform: uppercase;
       font-weight: bold;
-      font-size: 2rem;
-      margin-top: 100px; }
+      font-size: 2.4rem;
+      margin-top: 65px;
+      margin-bottom: 10px; }
+    .product-content article .content-container .single-product-price {
+      font-size: 1.8rem;
+      font-family: Novecentosanswide;
+      margin: 0px;
+      padding: 0px; }
     .product-content article .content-container div.product-entry-meta {
-      margin-bottom: 30px; }
+      margin-bottom: 30px;
+      font-family: Merriweather;
+      padding-top: 0px;
+      line-height: 1.7; }
+      .product-content article .content-container div.product-entry-meta p {
+        padding-bottom: 10px; }
 
 body.search div.site-content {
   position: relative;
